Fix friendly name of AC

--- a/esphome/climatisation_mitsubishi/heatpump-climate.yaml
+++ b/esphome/climatisation_mitsubishi/heatpump-climate.yaml
@@ -30,7 +30,7 @@ sensor:
 climate:
   - platform: cn105
     id: hp
-    name: "${friendly_name}"
+    name: None
     icon: mdi:heat-pump
     visual:
       min_temperature: 10
