--- a/themes/main_theme.yaml
+++ b/themes/main_theme.yaml
@@ -1,6 +1,6 @@
 Main Theme:
-  ha-card-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.16)
-  ha-card-border-width: 0
+  #ha-card-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.16)
+  #ha-card-border-width: 0
   app-header-background-color: rgba(var(--rgb-card-background-color), 0.5)
   app-header-text-color: var(--primary-text-color)
   app-header-backdrop-filter: blur(5px)
